# DarkMesh

./: .gitignore  BUILD_UNISHOX2_ANDROID.md  README.md  bash_build_commit.sh  build-unishox2-android.ps1  build-unishox2-android.sh  build.gradle  settings.gradle  win_build_commit.bat
app/: build.gradle  google-services.json  proguard-rules.pro
app/schemas/com.geeksville.mesh.database.MeshtasticDatabase/: 17.json  18.json  20.json  21.json  22.json  23.json
app/src/main/: AndroidManifest.xml
app/src/main/assets/: device_hardware.json
app/src/main/cpp/: CMakeLists.txt  jni_bridge.cpp
app/src/main/jniLibs/: README.md
app/src/main/res/drawable/: hw_heltec_v4.xml  ic_launcher2_background.xml
app/src/main/res/layout/: activity_advanced_settings.xml  activity_hunt.xml  activity_main.xml  activity_planmsg.xml  activity_planmsglist.xml  settings_fragment.xml
app/src/main/res/menu/: menu_main.xml
app/src/main/res/mipmap-anydpi-v26/: ic_launcher2_round.xml
app/src/main/res/values-bg/: strings.xml
app/src/main/res/values-ca/: strings.xml
app/src/main/res/values-cs/: strings.xml
app/src/main/res/values-de/: strings.xml
app/src/main/res/values-el/: strings.xml
app/src/main/res/values-es/: strings.xml
app/src/main/res/values-et/: strings.xml
app/src/main/res/values-fi/: strings.xml
app/src/main/res/values-fr/: strings.xml
app/src/main/res/values-fr-rHT/: strings.xml
app/src/main/res/values-ga/: strings.xml
app/src/main/res/values-gl/: strings.xml
app/src/main/res/values-hr/: strings.xml
app/src/main/res/values-hu/: strings.xml
(+204 files in other folders)
